build/parser.output
Terminals unused in grammar

   ADD
   SUB
   MUL
   DIV
   MOD
   LPAREN
   RPAREN
   LCURLY
   RCURLY
   LBRAC
   RBRAC
   VOID
   LE
   LEQ
   GE
   GEQ
   EQ
   NEQ
   AND
   OR
   NOT
   IF
   ELSE
   WHILE
   BREAK
   CONT
   RETURN
   PERIOD


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: Decl
    2         | CompUnit Decl

    3 Decl: ConstDecl
    4     | VarDecl

    5 ConstDecl: CONST INT ConstDefs SEMI

    6 ConstDefs: ConstDef
    7          | ConstDefs ConstDef

    8 ConstDef: IDENT ASSIGN ConstInitVal

    9 ConstInitVal: ConstExp

   10 ConstExp: AddExp

   11 AddExp: MulExp

   12 MulExp: UnaryExp

   13 UnaryExp: PrimaryExp

   14 PrimaryExp: NUMBER

   15 VarDecl: INT VarDefs SEMI

   16 VarDefs: VarDefs COMMA VarDef
   17        | VarDef

   18 VarDef: IDENT
   19       | IDENT ASSIGN InitVal

   20 InitVal: Exp

   21 Exp: AddExp


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258)
SUB (259)
MUL (260)
DIV (261)
MOD (262)
IDENT (263) 8 18 19
LPAREN (264)
RPAREN (265)
LCURLY (266)
RCURLY (267)
LBRAC (268)
RBRAC (269)
INT (270) 5 15
CONST (271) 5
VOID (272)
LE (273)
LEQ (274)
GE (275)
GEQ (276)
EQ (277)
NEQ (278)
AND (279)
OR (280)
NOT (281)
IF (282)
ELSE (283)
WHILE (284)
BREAK (285)
CONT (286)
RETURN (287)
ASSIGN (288) 8 19
SEMI (289) 5 15
COMMA (290) 16
PERIOD (291)
NUMBER (292) 14


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
CompUnit (39)
    on left: 1 2, on right: 0 2
Decl (40)
    on left: 3 4, on right: 1 2
ConstDecl (41)
    on left: 5, on right: 3
ConstDefs (42)
    on left: 6 7, on right: 5 7
ConstDef (43)
    on left: 8, on right: 6 7
ConstInitVal (44)
    on left: 9, on right: 8
ConstExp (45)
    on left: 10, on right: 9
AddExp (46)
    on left: 11, on right: 10 21
MulExp (47)
    on left: 12, on right: 11
UnaryExp (48)
    on left: 13, on right: 12
PrimaryExp (49)
    on left: 14, on right: 13
VarDecl (50)
    on left: 15, on right: 4
VarDefs (51)
    on left: 16 17, on right: 15 16
VarDef (52)
    on left: 18 19, on right: 16 17
InitVal (53)
    on left: 20, on right: 19
Exp (54)
    on left: 21, on right: 20


State 0

    0 $accept: . CompUnit $end

    INT    shift, and go to state 1
    CONST  shift, and go to state 2

    CompUnit   go to state 3
    Decl       go to state 4
    ConstDecl  go to state 5
    VarDecl    go to state 6


State 1

   15 VarDecl: INT . VarDefs SEMI

    IDENT  shift, and go to state 7

    VarDefs  go to state 8
    VarDef   go to state 9


State 2

    5 ConstDecl: CONST . INT ConstDefs SEMI

    INT  shift, and go to state 10


State 3

    0 $accept: CompUnit . $end
    2 CompUnit: CompUnit . Decl

    $end   shift, and go to state 11
    INT    shift, and go to state 1
    CONST  shift, and go to state 2

    Decl       go to state 12
    ConstDecl  go to state 5
    VarDecl    go to state 6


State 4

    1 CompUnit: Decl .

    $default  reduce using rule 1 (CompUnit)


State 5

    3 Decl: ConstDecl .

    $default  reduce using rule 3 (Decl)


State 6

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 7

   18 VarDef: IDENT .
   19       | IDENT . ASSIGN InitVal

    ASSIGN  shift, and go to state 13

    $default  reduce using rule 18 (VarDef)


State 8

   15 VarDecl: INT VarDefs . SEMI
   16 VarDefs: VarDefs . COMMA VarDef

    SEMI   shift, and go to state 14
    COMMA  shift, and go to state 15


State 9

   17 VarDefs: VarDef .

    $default  reduce using rule 17 (VarDefs)


State 10

    5 ConstDecl: CONST INT . ConstDefs SEMI

    IDENT  shift, and go to state 16

    ConstDefs  go to state 17
    ConstDef   go to state 18


State 11

    0 $accept: CompUnit $end .

    $default  accept


State 12

    2 CompUnit: CompUnit Decl .

    $default  reduce using rule 2 (CompUnit)


State 13

   19 VarDef: IDENT ASSIGN . InitVal

    NUMBER  shift, and go to state 19

    AddExp      go to state 20
    MulExp      go to state 21
    UnaryExp    go to state 22
    PrimaryExp  go to state 23
    InitVal     go to state 24
    Exp         go to state 25


State 14

   15 VarDecl: INT VarDefs SEMI .

    $default  reduce using rule 15 (VarDecl)


State 15

   16 VarDefs: VarDefs COMMA . VarDef

    IDENT  shift, and go to state 7

    VarDef  go to state 26


State 16

    8 ConstDef: IDENT . ASSIGN ConstInitVal

    ASSIGN  shift, and go to state 27


State 17

    5 ConstDecl: CONST INT ConstDefs . SEMI
    7 ConstDefs: ConstDefs . ConstDef

    IDENT  shift, and go to state 16
    SEMI   shift, and go to state 28

    ConstDef  go to state 29


State 18

    6 ConstDefs: ConstDef .

    $default  reduce using rule 6 (ConstDefs)


State 19

   14 PrimaryExp: NUMBER .

    $default  reduce using rule 14 (PrimaryExp)


State 20

   21 Exp: AddExp .

    $default  reduce using rule 21 (Exp)


State 21

   11 AddExp: MulExp .

    $default  reduce using rule 11 (AddExp)


State 22

   12 MulExp: UnaryExp .

    $default  reduce using rule 12 (MulExp)


State 23

   13 UnaryExp: PrimaryExp .

    $default  reduce using rule 13 (UnaryExp)


State 24

   19 VarDef: IDENT ASSIGN InitVal .

    $default  reduce using rule 19 (VarDef)


State 25

   20 InitVal: Exp .

    $default  reduce using rule 20 (InitVal)


State 26

   16 VarDefs: VarDefs COMMA VarDef .

    $default  reduce using rule 16 (VarDefs)


State 27

    8 ConstDef: IDENT ASSIGN . ConstInitVal

    NUMBER  shift, and go to state 19

    ConstInitVal  go to state 30
    ConstExp      go to state 31
    AddExp        go to state 32
    MulExp        go to state 21
    UnaryExp      go to state 22
    PrimaryExp    go to state 23


State 28

    5 ConstDecl: CONST INT ConstDefs SEMI .

    $default  reduce using rule 5 (ConstDecl)


State 29

    7 ConstDefs: ConstDefs ConstDef .

    $default  reduce using rule 7 (ConstDefs)


State 30

    8 ConstDef: IDENT ASSIGN ConstInitVal .

    $default  reduce using rule 8 (ConstDef)


State 31

    9 ConstInitVal: ConstExp .

    $default  reduce using rule 9 (ConstInitVal)


State 32

   10 ConstExp: AddExp .

    $default  reduce using rule 10 (ConstExp)
